--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ngrx/effects": "^15.2.1",
+    "@ngrx/store": "^15.2.1",
+    "@ngrx/store-devtools": "^15.2.1",
     "bootstrap": "^5.2.3",
     "concurrently": "^7.6.0",
     "json-server": "^0.17.1",
